fixed spacing between elements

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ button {
   margin: 10px;
   padding: 10px;
   border: 1px solid #007cb9;
-  border-radius: 6px;
+  border-radius: 10px;
   transition: all 150ms ease-in-out;
 }
 
